Suport for SmartOS Base 17.1.0
 - libssp is now dynamic on SmartOS (go figure)

--- a/client/builder-client.cabal
+++ b/client/builder-client.cabal
@@ -33,3 +33,5 @@ Executable builder-client
         Build-Depends: unix >= 2.3 && < 2.8
         Cpp-Options: -DHAVE_SYSTEM_POSIX_RESOURCE
 
+    if os(solaris)
+        Extra-Libraries: ssp
